--- a/src/components/neon/Neon.module.css
+++ b/src/components/neon/Neon.module.css
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
-/* body {
-    margin: 0;
-    background-color: black;
-    font-family: 'Monoton', sans-seriff;
-    font-size: 6rem;
-    font-weight: 700;
-    font-variant: small-caps;
-    letter-spacing: 18px;
-    font-stretch: ultra-expanded;
-} */
-
 :root {
     --colors-neon-letter: rgb(218, 17, 51);
     --colors-neon-green: hsla(350, 100%, 59%, 0.7);
@@ -46,15 +34,18 @@
 
 .o {
     animation: flicker 30s linear 12s infinite alternate;
+    -webkit-animation: flicker 30s linear 12s infinite alternate;
 }
 
 
 .l {
     animation: flicker 1.5s infinite alternate;
+    -webkit-animation: flicker 1.5s infinite alternate;
 }
 
 .j2 {
     animation: flicker 5s infinite alternate;
+    -webkit-animation: flicker 5s infinite alternate;
 }
 
 
@@ -80,13 +71,14 @@
   }
   
   @media only screen and (min-width: 1200px) {
+   
     .neonWrapper {
-       
         font-size: 11rem;
     }
   }
 
   @media only screen and (min-width: 2000px) {
+    
     .neonWrapper {
         font-size: 16rem;
     }
