--- a/src/pages/singlePortfolio/SinglePortfolio.module.css
+++ b/src/pages/singlePortfolio/SinglePortfolio.module.css
@@ -1,6 +1,6 @@
 .singlePort-container {
   color: var(--colors-background);
-  width: 90%;
+  /* width: 90%; */
   margin-top: 90px;
   flex-grow: 1;
   height: auto;
@@ -24,6 +24,7 @@
   left: 0;
   min-width: 100%;
   margin-bottom: 30px;
+  z-index: 4;
 }
 
 .title-mob {
@@ -83,8 +84,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  /* width: 100%; */
+  height: 100%;
   background-color: var(--colors-portfolio);
-  padding: 6px;
+  /* padding: 6px; */
 }
 
 .single-img {
@@ -172,6 +175,8 @@
   .port {
     padding: 30px;
     margin: 20px;
+    min-height: 600px;
+    min-width: 80vw;
   }
 
   .list {
