--- a/src/components/message/items/title/Title.module.css
+++ b/src/components/message/items/title/Title.module.css
@@ -2,22 +2,29 @@
     margin-top: -20px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+     text-align: justify;
+    padding: 0 10px;
 }
 
 .title {
     color: var(--colors-yellow);
     font-size: 2.9rem;
-    margin-bottom: -40px;
-    text-align: justify;
+   
+    display: inline-block;
+    text-align: center;
+    width: 100%;
 }
 
 .lighter{
  
   color: var(--colors-red);
-  /* margin-bottom: 100px; */
+  margin-top: 50px;
   font-variant: small-caps;
   font-weight: 900;
-  font-size: 6rem;
+  font-size: 7.6rem;
+  text-align: center;
+  display: inline-block;
+    width: 100%;
 }
