--- a/src/pages/singlePortfolio/SinglePortfolio.module.css
+++ b/src/pages/singlePortfolio/SinglePortfolio.module.css
@@ -84,6 +84,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   /* width: 100%; */
   height: 100%;
   background-color: var(--colors-portfolio);
@@ -94,13 +95,17 @@
   width: 90%;
   height: 90%;
   margin: 40px auto 5px auto;
+  display: flex;
+  justify-content: center;
 }
 
 .right {
+  margin-top: 100px;
   flex-direction: column;
   align-items: center;
+
   width: 90%;
-  margin: 0 auto;
+  
 }
 
 .right p {
