--- a/src/pages/portfolioScreen/PortfolioScreen.module.css
+++ b/src/pages/portfolioScreen/PortfolioScreen.module.css
@@ -51,7 +51,12 @@
 }
 
 .port-img {
+  display: flex;
+  align-items:center;
+  justify-content: center;
   width: 100%;
+  height: 230px; 
+ 
   aspect-ratio: 16 / 9;
   object-fit: cover;
   transition: all 0.3s ease-in-out;
@@ -62,16 +67,12 @@
 }
 
 .flame {
-  height: auto;
-  max-height: 260px; 
-  margin-top: -140px;
-  /*aspect-ratio: 16 / 9;
-  object-fit: cover;
-  */transform: scale(0.4);
-  -webkit-transform: scale(0.4);
-  -moz-transform: scale(0.4);
-  -ms-transform: scale(0.4);
-  -o-transform: scale(0.4);
+ padding-top: 140px;
+  transform: scale(0.2);
+  -webkit-transform: scale(0.2);
+  -moz-transform: scale(0.2);
+  -ms-transform: scale(0.2);
+  -o-transform: scale(0.2);
 }
 
 .port-img:hover {
@@ -136,15 +137,14 @@
   }
   .port-comp {
     width: 400px;
+    /* max-height: 300px; */
     padding: 30px 20px 0 20px;
   }
   .cat-button {
     width: 260px;
     flex: 0 0 25%; 
   }
-  /* .flame {
-    margin-top: -120px;
-  } */
+
 }
 @media only screen and (min-width: 1600px) {
   .port-container h1 {
@@ -158,12 +158,12 @@
   }
   .port-comp {
     width: 500px;
-    /* height: 350px; */
+    height: 400px;
   }
-  .port-img {
+  /* .port-img {
     width: 400px;
-    /* height: 213px; */
-  }
+    height: 213px;
+  } */
 
   .flame {
     max-height: auto;
